# ham-dash

./: .dockerignore  .env  .env.example  .gitignore  LICENCE  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: scan.yaml  test.yaml
app/: main.py
app/api/: api.py
app/api/endpoints/: example.py  hamqth.py
app/core/: config.py  utils.py
app/home/: __init__.py  endpoints.py
app/models/: callsign.py
docker/: Dockerfile  docker-entrypoint.sh  gunicorn_conf.py
scripts/: lint.sh  test.sh
test/: conftest.py  test_main.py
test/api/: test_hamqth.py
test/models/: test_callsign.py
