[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry~=1.1.8"]

[tool.poetry]
authors = ["James Curtin <jameswcurtin@gmail.com>"]
description = "Ameteur Radio Dashboard"
name = "ham-dash"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.70.0"
gunicorn = "20.1.0"
hamqth = "0.1.3"
pycountry = "20.7.3"
requests = "^2.26.0"
uvicorn = "0.15.0"
jinja2 = "3.0.2"
call_to_dxcc = "^0.0.1"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "4.0.1"
isort = { version = "5.9.3", extras = ["pyproject"]}
mypy = '0.910'
pydocstyle = "6.1.1"
pytest = "6.2.5"
pytest-cov = '3.0.0'
pytest-mock = "3.6.1"
requests-mock = "1.9.3"
pdbpp =  "0.10.3"

[tool.black]
line-length = 88
target_version = ['py38']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
profile = 'black'

[tool.coverage]
    [tool.coverage.run]
    source = ["app"]
    branch = true
    omit = ['']
    [tool.coverage.report]
    exclude_lines = [
        "# noqa",
        "raise NotImplementedError"
    ]
