[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry~=1.1.8"]

[tool.poetry]
authors = ["James Curtin <jameswcurtin@gmail.com>"]
description = "Ameteur Radio Dashboard"
name = "ham-dash"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.92.0"
gunicorn = "20.1.0"
hamqth = "0.1.3"
pycountry = "22.3.5"
pydantic = "1.10.5"
requests = "^2.26.0"
uvicorn = "0.20.0"
jinja2 = "3.1.2"
call_to_dxcc = "^0.0.1"

[tool.poetry.dev-dependencies]
black = "23.1.0"
fastapi = { version = "0.92.0", extras = ["all"]}
flake8 = "6.0.0"
isort = { version = "5.12.0", extras = ["pyproject"]}
mypy = '1.0.0'
pydocstyle = "6.3.0"
pytest = "7.2.1"
pytest-cov = '4.0.0'
pytest-mock = "3.10.0"
requests-mock = "1.10.0"
pdbpp =  "0.10.3"

[tool.black]
line-length = 88
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
profile = 'black'

[tool.coverage]
    [tool.coverage.run]
    source = ["app"]
    branch = true
    omit = ['']
    [tool.coverage.report]
    exclude_lines = [
        "# noqa",
        "raise NotImplementedError"
    ]
