[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry~=1.5.1"]

[tool.poetry]
authors = ["James Curtin <jameswcurtin@gmail.com>"]
description = "Ameteur Radio Dashboard"
name = "ham-dash"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
gunicorn = "21.2.0"
hamqth = "0.1.3"
pycountry = "22.3.5"
pydantic = "2.7.1"
requests = "^2.26.0"
uvicorn = "0.24.0.post1"
jinja2 = "3.1.2"
call_to_dxcc = "^0.0.1"
pydantic-settings = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "23.11.0"
fastapi = { version = "0.104.1", extras = ["all"]}
flake8 = "6.1.0"
isort = { version = "5.12.0", extras = ["pyproject"]}
mypy = '1.7.0'
pydocstyle = "6.3.0"
pytest = "7.4.3"
pytest-cov = '4.1.0'
pytest-mock = "3.12.0"
requests-mock = "1.11.0"
pdbpp =  "0.10.3"

[tool.black]
line-length = 88
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
profile = 'black'

[tool.coverage]
    [tool.coverage.run]
    source = ["app"]
    branch = true
    omit = ['']
    [tool.coverage.report]
    exclude_lines = [
        "# noqa",
        "raise NotImplementedError"
    ]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = [ "pydantic.mypy" ]
